Bug 280910 - Kmymoney crashes
Summary: Kmymoney crashes
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 308615 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-28 05:16 UTC by nhrdls
Modified: 2013-08-30 08:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (2.81 KB, text/plain)
2011-09-15 16:51 UTC, Wonko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nhrdls 2011-08-28 05:16:44 UTC
Application: kmymoney (4.6.0)
KDE Platform Version: 4.6.2 (4.6.2)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-11-generic-pae i686
Distribution: Ubuntu 11.04

-- Information about the crash:
I was trying to add new category. I started with typing  category name in the ledger transaction. Kmymoney prompted me for entering new category and crashed when I clicked on hierachy tab

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
[Current thread is 1 (Thread 0xb42ef710 (LWP 5310))]

Thread 3 (Thread 0xb3ea8b70 (LWP 5313)):
#0  0xb6a2b337 in pthread_mutex_lock () from /lib/i386-linux-gnu/libpthread.so.0
#1  0xb4b8e33d in g_main_context_query () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb4b8ee8c in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb4b8f92b in g_main_loop_run () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb3fe5304 in ?? () from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
#5  0xb4bb82df in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#6  0xb6a28e99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#7  0xb55a073e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 2 (Thread 0xadb07b70 (LWP 5343)):
#0  0xb787b424 in __kernel_vsyscall ()
#1  0xb5591f76 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0xb4b9f84b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb4b8f1af in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb4b8f524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb63d8577 in QEventDispatcherGlib::processEvents (this=0x9c3c970, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0xb63aa289 in QEventLoop::processEvents (this=0xadb07290, flags=...) at kernel/qeventloop.cpp:149
#7  0xb63aa522 in QEventLoop::exec (this=0xadb07290, flags=...) at kernel/qeventloop.cpp:201
#8  0xb62b42a0 in QThread::exec (this=0x9c3a900) at thread/qthread.cpp:492
#9  0xb638bfdb in QInotifyFileSystemWatcherEngine::run (this=0x9c3a900) at io/qfilesystemwatcher_inotify.cpp:248
#10 0xb62b6da2 in QThreadPrivate::start (arg=0x9c3a900) at thread/qthread_unix.cpp:320
#11 0xb6a28e99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0xb55a073e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb42ef710 (LWP 5310)):
[KCrash Handler]
#7  0xb6e9a8f1 in KLineEdit::contextMenuEvent(QContextMenuEvent*) () from /usr/lib/libkdeui.so.5
#8  0xb58e4cd8 in QWidget::event (this=0x9c768b8, event=0xbfb7ff04) at kernel/qwidget.cpp:8426
#9  0xb5ce8a87 in QLineEdit::event (this=0x9c768b8, e=0xbfb7ff04) at widgets/qlineedit.cpp:1485
#10 0xb6e95f08 in KLineEdit::event(QEvent*) () from /usr/lib/libkdeui.so.5
#11 0xb5ca6a1f in QComboBox::contextMenuEvent (this=0x9e8b710, e=0xbfb7ff04) at widgets/qcombobox.cpp:3070
#12 0xb58e4cd8 in QWidget::event (this=0x9e8b710, event=0xbfb7ff04) at kernel/qwidget.cpp:8426
#13 0xb5caa704 in QComboBox::event (this=0x9e8b710, event=0xbfb7ff04) at widgets/qcombobox.cpp:2834
#14 0xb588bd24 in QApplicationPrivate::notify_helper (this=0x8e93020, receiver=0x9e8b710, e=0xbfb7ff04) at kernel/qapplication.cpp:4462
#15 0xb5890c62 in QApplication::notify (this=0x8e8fa40, receiver=0x9c768b8, e=0xbfb8017c) at kernel/qapplication.cpp:4102
#16 0xb6dc33ca in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#17 0xb63ab0bb in QCoreApplication::notifyInternal (this=0x8e8fa40, receiver=0x9c768b8, event=0xbfb8017c) at kernel/qcoreapplication.cpp:731
#18 0xb59180d3 in sendSpontaneousEvent (this=0x93481d0, event=0xbfb8067c) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#19 QETWidget::translateMouseEvent (this=0x93481d0, event=0xbfb8067c) at kernel/qapplication_x11.cpp:4563
#20 0xb59169b5 in QApplication::x11ProcessEvent (this=0x8e8fa40, event=0xbfb8067c) at kernel/qapplication_x11.cpp:3680
#21 0xb59425f4 in x11EventSourceDispatch (s=0x8e95f00, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#22 0xb4b8eaa8 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#23 0xb4b8f270 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#24 0xb4b8f524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#25 0xb63d853c in QEventDispatcherGlib::processEvents (this=0x8e55aa8, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#26 0xb59421e5 in QGuiEventDispatcherGlib::processEvents (this=0x8e55aa8, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#27 0xb63aa289 in QEventLoop::processEvents (this=0xbfb80944, flags=...) at kernel/qeventloop.cpp:149
#28 0xb63aa522 in QEventLoop::exec (this=0xbfb80944, flags=...) at kernel/qeventloop.cpp:201
#29 0xb63aeecc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#30 0xb58898e7 in QApplication::exec () at kernel/qapplication.cpp:3736
#31 0x08087a15 in runKMyMoney (splash=0x8ff0900, a=<value optimized out>) at /build/buildd/kmymoney-4.6.0/kmymoney/main.cpp:282
#32 0x080899e5 in main (argc=0, argv=0x0) at /build/buildd/kmymoney-4.6.0/kmymoney/main.cpp:181

Possible duplicates by query: bug 252591.

Reported using DrKonqi
Comment 1 Cristian Oneț 2011-08-28 07:15:29 UTC
Is this crash reproducible? It seems to work fine here when I perform the steps you've described. If you can reproduce it please attach an anonymous file.
Comment 2 nhrdls 2011-08-28 16:22:36 UTC
Nope, its not reproducible. I had tried creating categories before and after
the crash. So far it has crashed only one time that I logged the bug for.
I'll keep any eye on it it and if I can find out the exact steps or other
causes, will update it here.

On Sun, Aug 28, 2011 at 12:15 AM, Cristian Onet <onet.cristian@gmail.com>wrote:

> https://bugs.kde.org/show_bug.cgi?id=280910
>
>
>
>
>
> --- Comment #1 from Cristian Onet <onet cristian gmail com>  2011-08-28
> 07:15:29 ---
> Is this crash reproducible? It seems to work fine here when I perform the
> steps
> you've described. If you can reproduce it please attach an anonymous file.
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 3 Wonko 2011-09-15 16:51:24 UTC
Created attachment 63671 [details]
New crash information added by DrKonqi

kmymoney (4.6.0) on KDE Platform 4.7.1 (4.7.1) using Qt 4.7.4

Also a crash while creating a new category. I entered the new name (followed by a space character in order to avoid auto completion), and got the dialog to specify the parent. I chose one, filled the date and amount, and when I wanted to accept the changes, KMyMoney crashed. I tried again, no crash this time.

-- Backtrace (Reduced):
#6  0x00007f8bf788c8de in KLineEdit::contextMenuEvent(QContextMenuEvent*) () from /usr/lib64/libkdeui.so.5
#7  0x00007f8bf45e6a79 in QWidget::event(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#8  0x00007f8bf497c331 in QLineEdit::event(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#9  0x00007f8bf788876b in KLineEdit::event(QEvent*) () from /usr/lib64/libkdeui.so.5
#10 0x00007f8bf49409ef in QComboBox::contextMenuEvent(QContextMenuEvent*) () from /usr/lib64/qt4/libQtGui.so.4
Comment 4 Jekyll Wu 2013-03-04 16:20:07 UTC
*** Bug 308615 has been marked as a duplicate of this bug. ***
Comment 5 Cristian Oneț 2013-08-30 08:30:36 UTC
Managed to reproduce this:
1. Enter a category which does not exist
2. Trigger the focus out event on the category widget using the context menu (right-click in the line edit)
3. Create the category (accept the dialog)
4. Observe that the context menu is not there
5. Exit KMyMoney - > crash while executing the context menu
Comment 6 Cristian Oneț 2013-08-30 08:33:10 UTC
Git commit 0a6314c2d45b959beb62f0ff742089e9c8195c02 by Cristian Oneț.
Committed on 30/08/2013 at 08:31.
Pushed by conet into branch 'master'.

Fix a crash after the context menu is requested in the category line
edit while a new category is entered in that line edit.

M  +2    -1    kmymoney/widgets/kmymoneycombo.cpp

http://commits.kde.org/kmymoney/0a6314c2d45b959beb62f0ff742089e9c8195c02
Comment 7 Cristian Oneț 2013-08-30 08:33:52 UTC
Git commit 3eaddf8cc00bd3c7262c37525af60a4bf5d745a7 by Cristian Oneț.
Committed on 30/08/2013 at 08:31.
Pushed by conet into branch '4.6'.

Fix a crash after the context menu is requested in the category line
edit while a new category is entered in that line edit.
(cherry picked from commit 0a6314c2d45b959beb62f0ff742089e9c8195c02)

M  +2    -1    kmymoney/widgets/kmymoneycombo.cpp

http://commits.kde.org/kmymoney/3eaddf8cc00bd3c7262c37525af60a4bf5d745a7