Fix a crash after the context menu is requested in the category line edit while a new category is entered in that line edit.

BUG: 280910
(cherry picked from commit 0a6314c2d45b959beb62f0ff742089e9c8195c02)